fix tag color contrast problem of default theme

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -105,10 +105,10 @@ $bg-tag-type0: #19af95;
 $bg-tag-type1: #005b4a;
 $bg-tag-type2: #865260;
 $bg-tag-type3: #993192;
-$bg-tag-type4: #e682dc;
+$bg-tag-type4: #a74c9e;
 
 $color-tag-danger-ex: #fff;
-$bg-tag-danger-ex: #e03953;
+$bg-tag-danger-ex: #c32e45;
 
 $screen-sm: 576px;
 $screen-md: 768px;
@@ -274,14 +274,14 @@ $control-disabled-color: #111;
 $form-check-disabled-color: #6c757d;
 
 // tags
-$bg-tag-primary: #6782e5;
-$bg-tag-secondary: #7d5ae8;
-$bg-tag-success: $bg-success;
-$bg-tag-danger: $bg-danger;
-$bg-tag-warn: $bg-warn;
-$bg-tag-info: $bg-info;
+$bg-tag-primary: #4b64bf;
+$bg-tag-secondary: #6a4cc5;
+$bg-tag-success: #197653;
+$bg-tag-danger: #b13355;
+$bg-tag-warn: #a15735;
+$bg-tag-info: #20728d;
+$bg-tag-light: #676776;
 $bg-tag-dark: $bg-dark;
-$bg-tag-light: #8b8b9e;
 
 // badges
 // classname,         bg,       color
